--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,15 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
+    env:
+      AWS_STAGE: live
+      AWS_REGION: eu-central-1
 
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+
+    - name: Serverless Ping
+      uses: serverless/github-action@master
+      with:
+        args: deploy --config ./serverless/ping.yml  --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
