--- a/serverless/ping.yml
+++ b/serverless/ping.yml
@@ -2,11 +2,13 @@ service: Ping
 
 provider:
   name: aws
-  runtime: python3.8
+  runtime: python3.9
 
 functions:
   ping:
     handler: ping.handle
+    package:
+      artifact: functions.zip
     events: 
       - http:
         method: GET
