--- a/.github/workflows/deploy main.yml
+++ b/.github/workflows/deploy main.yml
@@ -27,5 +27,9 @@ jobs:
 
       - name: Serverless Ping
         uses: serverless/github-action@master
+        # secrets:
+        # - AWS_ACCESS_KEY_ID
+        # - AWS_SECRET_ACCESS_KEY
         with:          
+          # args: deploy --config ./serverless/ping.yml  --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
           args: deploy --config ./serverless/ping.yml  --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
