--- a/.github/workflows/deploy python.yml
+++ b/.github/workflows/deploy python.yml
@@ -25,11 +25,20 @@ jobs:
           zip -r functions.zip ./*.py
           cp functions.zip ../../functions.zip
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with: 
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          #aws-region: eu-central-1
+
       - name: Serverless Ping
         uses: serverless/github-action@master
+        #serverless config credentials --provider aws --key AKIAIOSFODNN7EXAMPLE --secret wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
         # secrets:
         # - AWS_ACCESS_KEY_ID
         # - AWS_SECRET_ACCESS_KEY
         with:          
           # args: deploy --config ./serverless/ping.yml  --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
           args: deploy --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
+        
