--- a/.github/workflows/deploy python.yml
+++ b/.github/workflows/deploy python.yml
@@ -30,7 +30,7 @@ jobs:
         with: 
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          #aws-region: eu-central-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Serverless Ping
         uses: serverless/github-action@master
