--- a/.github/workflows/deploy python.yml
+++ b/.github/workflows/deploy python.yml
@@ -34,11 +34,8 @@ jobs:
 
       - name: Serverless Ping
         uses: serverless/github-action@master
-        #serverless config credentials --provider aws --key AKIAIOSFODNN7EXAMPLE --secret wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-        # secrets:
-        # - AWS_ACCESS_KEY_ID
-        # - AWS_SECRET_ACCESS_KEY
         with:          
-          # args: deploy --config ./serverless/ping.yml  --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
-          args: deploy --config serverless/serverless.yml --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
+          #args: deploy --config serverless/serverless.yml --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
+          # they WANT serverless file in the root path ()
+          args: deploy --stage ${{env.AWS_STAGE}} --region ${{env.AWS_REGION}}
         
