add soluton build

--- a/.github/workflows/deploy fsharp.yml
+++ b/.github/workflows/deploy fsharp.yml
@@ -25,3 +25,5 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
+    - name: Buid VS solution
+      run: dotnet build "FSharp project/Portfolio AWS API.sln" -c RELEASE
