--- a/.github/workflows/deploy fsharp.yml
+++ b/.github/workflows/deploy fsharp.yml
@@ -34,7 +34,7 @@ jobs:
       run: |
         dotnet publish "FSharp project/AwsLambda/AwsLambda.fsproj" -c RELEASE -o src/publish
         cd src/publish
-        zip -r functions.zip ./*
+        zip -r fsharp-functions.zip ./*
     - name: Serverless
       uses: serverless/github-action@master
       with:
