--- a/.github/workflows/deploy fsharp.yml
+++ b/.github/workflows/deploy fsharp.yml
@@ -32,8 +32,8 @@ jobs:
     #  run: dotnet test src/UnitTests/UnitTests.fsproj -c Release --no-build --filter "TestCategory!=SKIP_ON_DEPLOY"
     - name: Publish zip
       run: |
-        dotnet publish "FSharp project/AwsLambda/AwsLambda.fsproj" -c RELEASE -o src/publish
-        cd src/publish
+        dotnet publish "FSharp project/AwsLambda/AwsLambda.fsproj" -c RELEASE -o "FSharp project/publish"
+        cd "FSharp project/publish"
         zip -r fsharp-functions.zip ./*
     - name: Serverless
       uses: serverless/github-action@master
