--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,8 @@ configValidationMode: error
 provider:
   name: aws
   runtime: python3.8
-  apiName: Portfolio # API Gateway name
+  stackName: Portfolio-Python.2021
+  apiName: Portfolio-Python.2021 # API Gateway name
   lambdaHashingVersion: "20201221"
 
 functions:
