--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -1,5 +1,5 @@
 # syntax ref.: https://www.serverless.com/framework/docs/providers/aws/guide/serverless.yml/
-service: PortfolioAPISharp
+service: PortfolioAPIFSharp
 configValidationMode: error
 
 provider:
