--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -6,12 +6,14 @@ provider:
   name: aws
   runtime: dotnetcore3.1
   stackName: Portfolio-FSharp # CloudFormation stack name
-  apiName: Portfolio-FSharp # API Gateway name
-  restApiId: portfolio2021
+  apiName: Portfolio-FSharp # API Gateway name  
   deploymentBucket:
     name: portfolio.api.fsharp-functions
   memorySize: 512
   lambdaHashingVersion: "20201221"
+
+  apiGateWay:
+    restApiId: portfolio-fsharp
 
   environment:
     handler_prefix: "Portfolio.API::Portfolio.Lambda.Functions" # Assembly::Namespace prefix, contatenate .Class::Method
