--- a/FSharp project/AwsLambda/AwsLambda.fsproj
+++ b/FSharp project/AwsLambda/AwsLambda.fsproj
@@ -15,11 +15,10 @@
     <Compile Include="Library.fs" />
   </ItemGroup>
 
-  <ItemGroup />
-
   <ItemGroup>
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.4.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="2.0.0" />
+    <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
