Add repository project

--- a/FSharp project/AwsLambda/AwsLambda.fsproj
+++ b/FSharp project/AwsLambda/AwsLambda.fsproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Compile Include="Functions\Function Base.fs" />
+    <Compile Include="Functions\Currency Get.fs" />
     <Compile Include="Functions\Currency List.fs" />
     <Compile Include="Functions\Currency Create.fs" />
     <Compile Include="Library.fs" />
