--- a/FSharp project/AwsLambda/AwsLambda.fsproj
+++ b/FSharp project/AwsLambda/AwsLambda.fsproj
@@ -25,6 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Core\Core.fsproj" />
+    <ProjectReference Include="..\MongoRepository\MongoRepository.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
