List is not supported

--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -29,7 +29,7 @@ functions:
       artifact: "FSharp project/publish/fsharp-functions.zip"
     events:
     - http:
-        method: List
+        method: GET
         path: currency
         cors: true
 
