--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Core\Core.fsproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
