add LambdaSerializer attribute

--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="assembly.fs" />
     <None Include="configuration.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
