update  project file

--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -15,7 +15,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Functions\Function Base.fs" />
-    <Compile Include="Functions\Currency.fs" />
+    <Compile Include="Functions\Currency functions.fs" />
   </ItemGroup>
 
   <ItemGroup>
