Add Create function hadler. Spike new structure.

--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -16,6 +16,7 @@
     </None>
     <Compile Include="Functions\Function Base.fs" />
     <Compile Include="Functions\Currency functions.fs" />
+    <Compile Include="Functions\Currency handlers.fs" />
   </ItemGroup>
 
   <ItemGroup>
