--- a/serverless/serverless.fsharp.yml
+++ b/serverless/serverless.fsharp.yml
@@ -17,16 +17,26 @@ provider:
   # The CloudFormation template is invalid: Template error: instance of Fn::GetAtt references undefined resource ApiGatewayRestApi
 
   environment:
-    functionCurrencyPrefix: "Portfolio.Api::Portfolio.Api.Functions.Currency"  # Assembly::Namespace prefix, contatenate .Class::Method
+    functionCurrencyPrefix: "Portfolio.Api::Portfolio.Api.Functions.Currency"  # Assembly::Namespace prefix, concatenate .Class::Method
 
 package:
   individually: true
 
 functions:
-  List:
-    handler: ${self:provider.environment.functionCurrencyPrefix}.All::Handle  # assembly::namespace.class::method
+  Create:
+    handler: "Portfolio.Api::Portfolio.Api.Functions.CurrencyFunctions::Create"  # assembly::namespace.class::method
     package: &package
       artifact: "FSharp project/publish/fsharp-functions.zip"
+    events:
+    - http:
+        method: GET
+        path: currency/all
+        cors: true
+
+  List:
+    handler: ${self:provider.environment.functionCurrencyPrefix}.All::Handle  # assembly::namespace.class::method
+    package: 
+      <<: *package
     events:
     - http:
         method: GET
