--- a/FSharp project/MongoRepository/MongoRepository.fsproj
+++ b/FSharp project/MongoRepository/MongoRepository.fsproj
@@ -8,7 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="RepositoryBase.fs" />
+    <Compile Include="UserRepository.fs" />
     <Compile Include="CurrencyRepository.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="MongoDB.Driver" Version="2.13.1" />
+    <PackageReference Include="MongoDB.Driver.Core" Version="2.13.1" />
   </ItemGroup>
 
   <ItemGroup>
