Add User Create function

--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -15,6 +15,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Functions\Function Base.fs" />
+    <Compile Include="Functions\User.fs" />
     <Compile Include="Functions\Currency functions.fs" />
     <Compile Include="Functions\Currency handlers.fs" />
   </ItemGroup>
