--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -17,7 +17,7 @@
     <Compile Include="Functions\Function Base.fs" />
     <Compile Include="Functions\User.fs" />
     <Compile Include="Functions\Currency functions.fs" />
-    <Compile Include="Functions\Currency handlers.fs" />
+    <Compile Include="Functions\Currency.fs" />
   </ItemGroup>
 
   <ItemGroup>
