--- a/FSharp project/AwsLambda/AWS Lambda.fsproj
+++ b/FSharp project/AwsLambda/AWS Lambda.fsproj
@@ -15,8 +15,8 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <Compile Include="Functions\Function Base.fs" />
-    <Compile Include="Functions\User.fs" />
-    <Compile Include="Functions\Currency.fs" />
+    <Compile Include="Functions\User Functions.fs" />
+    <Compile Include="Functions\Currency Functions.fs" />
   </ItemGroup>
 
   <ItemGroup>
